- fixed: changing the type of a column in the data editor was broken
- fixed: quitting while a plugin was still active would sometimes crash rkward
- new shortcuts for window navigations: next/previous window, activate console, activate command log, etc.
- new functions rk.describe.alternative () and rk.print.literal () for use in plugins
- new Phillips-Perron test
- new Mood test
- new variance tests (F test (aka var.test), Bartlett test, Flingner test)
- new plugin pareto chart
- new plugin stem-and-leaf plot
- make readline dialog store last size and position
- new outlier test (chisq.out.test, dixon.test, grubbs.test, outlier)
- support R's mechanism for checking the C stack limits (only with R 2.3.x or greater, and not on all platforms)
- support of all tests from moments package
- new help related page "Trouble Shooting"
- better error handling in PHP backend
- fixed: depending on some buffer sizes, plugins could get stuck while generating code
- fixed: plugin browser type="dir" would not work correctly
- import SPSS and import CSV plugins gain option to open object for editing, automatically (checked by default)
- warn when opening very large objects (with more than 250000 fields; this limit is configurable)
- add a "copy" tag to facilitate writing plugins with both dialog and wizard interfaces		TODO: document, convert all wizards to use this
- fixed: graph previews would stop working when the interface is switched from dialog to wizard or vice versa
- new options for plugin dialogs: Configure whether code display is shown by default, and at what size

--- Version 0.4.6 - Feb-15-2007
- make sure any LC_ALL environment setting will not be applied by SCIM plugin (if installed on the system)
- fix crash after changing storage type of an object in the data editor
- single line input fields in plugins no longer accept new-lines
- support for calculating p-values in correlation matrix plugin