@@ -89,6 +89,7 @@ friend class RKConsolePart;
 	bool eventFilter (QObject *o, QEvent *e);
 /** set syntax-highlighting for R */
 	void setRHighlighting ();
+	bool doTabCompletionHelper (int line_num, const QString &line, int word_start, int word_end, const QStringList &entries);
 	QString incomplete_command;
 	bool command_incomplete;
 /** A list to store previous commands */
